--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -16,15 +16,18 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %} {% endblock %} | {{ site.name }}</title>
-    <link rel="icon" href="{% static 'images/icons/favicon.ico' %}">
+    <title>{% block title %} {% endblock %} | 财经日报</title>
+    <link rel="icon" href="{% static 'front/images/icons/favicon.png' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'front/css/base.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light rounded">
+<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light rounded">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">{{ site.name }}</a>
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'front/images/icons/logo.png' %}" alt="logo" width="30" height="30"
+                 class="d-inline-block align-text-top">
+            财经日报</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,12 +36,12 @@
             <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
                 {% for i in categories %}
                     <li class="nav-item dropdown"> <-- 不加dropdown会让下拉菜单出现在错误的位置
-                        <a class="nav-link dropdown-toggle" href="/category/{{ i.name }}" id="navbarDropdown"
+                        <a class="nav-link dropdown-toggle" href="/category/{{ i.id }}" id="navbarDropdown"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {{ i.name }}</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown"> <-- 对齐末尾，避免尾端超出屏幕
                             {% for j in i.subcategories %}
-                                <li><a class="dropdown-item" href="/category/{{ j.name }}">{{ j.name }}</a></li>
+                                <li><a class="dropdown-item" href="/category/{{ j.id }}">{{ j.name }}</a></li>
                             {% endfor %}
                         </ul>
                     </li>
@@ -69,7 +72,7 @@
 
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-muted">© 2023 {{ site.name }}. 保留所有权利.</span>
+        <span class="text-muted">© 2023 财经日报. 保留所有权利.</span>
     </div>
 </footer>
 </body>
