--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -16,7 +16,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %} {% endblock %} | 财经日报</title>
+    <title>{% block titleblock %} {% endblock %} | 财经日报</title>
     <link rel="icon" href="{% static 'front/images/icons/favicon.png' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'front/css/base.css' %}">
