--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -20,6 +20,7 @@
     <link rel="icon" href="{% static 'front/images/icons/favicon.png' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'front/css/base.css' %}">
+{#    <script src="{% static 'front/js/base.js' %}"></script>#}
 </head>
 <body>
 <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light rounded">
@@ -35,11 +36,11 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
                 {% for i in categories %}
-                    <li class="nav-item dropdown"> <-- 不加dropdown会让下拉菜单出现在错误的位置
+                    <li class="nav-item dropdown"> {#不加dropdown会让下拉菜单出现在错误的位置#}
                         <a class="nav-link dropdown-toggle" href="/category/{{ i.id }}" id="navbarDropdown"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {{ i.name }}</a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown"> <-- 对齐末尾，避免尾端超出屏幕
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown"> {# 对齐末尾，避免尾端超出屏幕 #}
                             {% for j in i.subcategories %}
                                 <li><a class="dropdown-item" href="/category/{{ j.id }}">{{ j.name }}</a></li>
                             {% endfor %}
