--- a/templates/front/post.html
+++ b/templates/front/post.html
@@ -25,7 +25,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <-- 防XSS -->
+            {# 防XSS #}
             {% if post.approved %}
             <p class="mt-0 mb-3">{{ post.body|safe }}</p>
             {% else %}
