--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -49,17 +49,17 @@
                 {% endfor %}
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="{% url 'panel' %}" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="/admin" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             {{ user.username }}</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'panel' %}">管理</a></li>
+                            <li><a class="dropdown-item" href="/admin">管理</a></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">登出</a></li>
                         </ul>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">登陆/注册</a>
+                        <a class="nav-link" href="/admin">登陆</a>
                     </li>
                 {% endif %}
             </ul>
