--- a/templates/front/post.html
+++ b/templates/front/post.html
@@ -8,7 +8,7 @@
 {% block mainblock %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 text-center">
             <img src="{{ post.get_image_url }}" alt="Article image" class="img-fluid">
         </div>
     </div>
