--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -16,7 +16,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block titleblock %} {% endblock %} | 财经日报</title>
+    <title>{% block titleblock %} {% endblock %} | 财有料</title>
     <link rel="icon" href="{% static 'front/images/icons/favicon.png' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'front/css/base.css' %}">
@@ -28,7 +28,7 @@
         <a class="navbar-brand" href="{% url 'home' %}">
             <img src="{% static 'front/images/icons/logo.png' %}" alt="logo" width="30" height="30"
                  class="d-inline-block align-text-top">
-            财经日报</a>
+            财有料</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -73,7 +73,7 @@
 
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-muted">© 2023 财经日报. 保留所有权利.</span>
+        <span class="text-muted">© 2023 财有料. 保留所有权利.</span>
     </div>
 </footer>
 </body>
