--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -51,7 +51,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="/admin" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
-                            {{ user.username }}</a>
+                            {{ user.name }}</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/admin">管理</a></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">登出</a></li>
