--- a/templates/front/post.html
+++ b/templates/front/post.html
@@ -17,7 +17,7 @@
             <h1 class="mt-3 mb-3">{{ post.title }}</h1>
         </div>
         <div class="col-md-4 text-right">
-            <p class="mt-3 mb-0">作者：{{ post.author }}</p>
+            <p class="mt-3 mb-0">作者：{{ post.author.name }}</p>
             <p class="mt-0 mb-0">分类：{{ post.category.get_full_name }}</p>
             <p class="mt-0 mb-3">创建于{{ post.created_time|date:"Y年m月d日" }}</p>
             <p class="mt-0 mb-3">最后修改于{{ post.modified_time|date:"Y年m月d日" }}</p>
