--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -19,6 +19,8 @@
     <title>{% block titleblock %} {% endblock %} | 财有料</title>
     <link rel="icon" href="{% static 'front/images/icons/favicon.png' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'front/css/base.css' %}">
 {#    <script src="{% static 'front/js/base.js' %}"></script>#}
 </head>
