--- a/templates/front/home.html
+++ b/templates/front/home.html
@@ -36,7 +36,7 @@
     <div class="row row-cols-1 row-cols-sm-2 g-4">
         {% for post in latest %}
         <div class="col">
-            <div class="card">
+            <div class="card h-100">
                 <img src="{{ post.get_image_url }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h4 class="card-title">{{ post.title }}</h4>
