--- a/templates/front/post.html
+++ b/templates/front/post.html
@@ -7,24 +7,31 @@
 
 {% block mainblock %}
     <div class="container">
+        {% if post.get_image_url %}
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <img src="{{ post.get_image_url }}" alt="Article image" class="img-fluid">
+                </div>
+            </div>
+        {% endif %}
         <div class="row">
-            <div class="col-md-12 text-center">
-                <img src="{{ post.get_image_url }}" alt="Article image" class="img-fluid">
+            <div class="col-md-12">
+                <h1 class="fw-bold">{{ post.title }}</h1>
+            </div>
+            <div class="col-md-12 mt-4">
+                <ul class="list-inline text-muted">
+                    <li class="list-inline-item"><i class="fas fa-user me-2"></i>{{ post.author.name }}</li>
+                    <li class="list-inline-item"><i class="fas fa-folder-open me-2"></i><a style="color: inherit"
+                                                                                           href="{% url 'category_detail' post.category.id %}">{{ post.category.get_full_name }}</a>
+                    </li>
+                    <li class="list-inline-item"><i
+                            class="far fa-calendar-alt me-2"></i>创建于{{ post.created_time|date:"Y年m月d日" }}</li>
+                    <li class="list-inline-item"><i
+                            class="far fa-calendar-check me-2"></i>最后修改于{{ post.modified_time|date:"Y年m月d日" }}
+                    </li>
+                </ul>
             </div>
         </div>
-<div class="row">
-  <div class="col-md-12">
-    <h1 class="fw-bold">{{ post.title }}</h1>
-  </div>
-  <div class="col-md-12 mt-4">
-    <ul class="list-inline text-muted">
-      <li class="list-inline-item"><i class="fas fa-user me-2"></i>{{ post.author.name }}</li>
-      <li class="list-inline-item"><i class="fas fa-folder-open me-2"></i><a style="color: inherit" href="{% url 'category_detail' post.category.id %}">{{ post.category.get_full_name }}</a></li>
-      <li class="list-inline-item"><i class="far fa-calendar-alt me-2"></i>创建于{{ post.created_time|date:"Y年m月d日" }}</li>
-      <li class="list-inline-item"><i class="far fa-calendar-check me-2"></i>最后修改于{{ post.modified_time|date:"Y年m月d日" }}</li>
-    </ul>
-  </div>
-</div>
 
         <div class="col-md-12">
             {# 防XSS #}
@@ -34,7 +41,6 @@
                 <p class="mt-0 mb-3">{{ post.body|escape|linebreaksbr }}</p>
             {% endif %}
         </div>
-    </div>
     </div>
 {% endblock %}
 
