remove slide when no pinned

--- a/templates/front/home.html
+++ b/templates/front/home.html
@@ -10,29 +10,32 @@
 
 {% block mainblock %}
     <main class="container">
-        <div id="carouselFeaturedPosts" class="carousel carousel-light slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                {% for post in featured_posts %}
-                    <button type="button" data-bs-target="#carouselFeaturedPosts"
-                            data-bs-slide-to="{{ forloop.counter0 }}"
-                            class="{% if forloop.first %}active{% endif %}" aria-current="true"
-                            aria-label="Slide {{ forloop.counter0 }}"></button>
-                {% endfor %}
-            </div>
-            <div class="carousel-inner">
-                {% for post in featured_posts %}
-                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                        <img src="{{ post.get_image_url }}"
-                             style="object-fit: cover; width: inherit; height: inherit; max-height: 300px" alt="...">
-                        <div class="carousel-caption d-block">
-                            <h1>{{ post.title }}</h1>
-                            <a class="text stretched-link no-style-link" style="font-size: 1.5rem"
-                               href="{{ post.get_absolute_url }}">{{ post.excerpt }}</a>
+        {% if featured_posts %}
+            <div id="carouselFeaturedPosts" class="carousel carousel-light slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    {% for post in featured_posts %}
+                        <button type="button" data-bs-target="#carouselFeaturedPosts"
+                                data-bs-slide-to="{{ forloop.counter0 }}"
+                                class="{% if forloop.first %}active{% endif %}" aria-current="true"
+                                aria-label="Slide {{ forloop.counter0 }}"></button>
+                    {% endfor %}
+                </div>
+                <div class="carousel-inner">
+                    {% for post in featured_posts %}
+                        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                            <img src="{{ post.get_image_url }}"
+                                 style="object-fit: cover; width: inherit; height: inherit; max-height: 300px"
+                                 alt="...">
+                            <div class="carousel-caption d-block">
+                                <h1>{{ post.title }}</h1>
+                                <a class="text stretched-link no-style-link" style="font-size: 1.5rem"
+                                   href="{{ post.get_absolute_url }}">{{ post.excerpt }}</a>
+                            </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                </div>
             </div>
-        </div>
+        {% endif %}
 
         {% if latest %}
             <div class="row row-cols-1 row-cols-sm-2 g-4">
@@ -55,12 +58,13 @@
             </div>
         {% else %}
             <div class="col">
-               <div class="row text-center">
+                <div class="row text-center">
                     <h2>没有文章</h2>
                     <p>这里什么都没有，快去写一篇文章吧！</p>
                 </div>
                 <div class="row">
-                    <img src="https://http.cat/204" alt="Sad Panda" class="img-fluid text-center" style="padding-inline: 25%">
+                    <img src="https://http.cat/204" alt="Sad Panda" class="img-fluid text-center"
+                         style="padding-inline: 25%">
                 </div>
             </div>
         {% endif %}
