add 204 image for category page

--- a/templates/front/home.html
+++ b/templates/front/home.html
@@ -63,7 +63,7 @@
                     <p>这里什么都没有，快去写一篇文章吧！</p>
                 </div>
                 <div class="row">
-                    <img src="https://http.cat/204" alt="Sad Panda" class="img-fluid text-center"
+                    <img src="https://http.cat/204" alt="204" class="img-fluid text-center"
                          style="padding-inline: 25%">
                 </div>
             </div>
