--- a/templates/front/category.html
+++ b/templates/front/category.html
@@ -2,43 +2,51 @@
 {% load static %}
 
 {% block titleblock %}
-分类： {{ category.get_full_name }}
+    分类： {{ category.get_full_name }}
 {% endblock %}
 
 {% block mainblock %}
-<h1 class="text-center">分类： {{ category.get_full_name }}</h1>
-<div></div>
-<div class="list-group">
-{% for post in posts %}
-<a href="{{ post.get_absolute_url }}" class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">{{ post.title }}</h5>
-        <small>{{ post.created_at|date:"Y年m月d日 H:i" }}</small>
-    </div>
-    <p class="mb-1">{{ post.excerpt }}</p>
-    <small>作者：{{ post.author }}</small>
-</a>
-{% endfor %}
-</div>
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            <li class="page-item {% if not posts.has_previous %}disabled{% endif %}">
-                <a class="page-link" href="{% if posts.has_previous %}?page={{ posts.previous_page_number }}{% endif %}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">上一页</span>
+    <h1 class="text-center">分类： {{ category.get_full_name }}</h1>
+    <br>
+    {% if posts %}
+        <div class="list-group">
+            {% for post in posts %}
+                <a href="{{ post.get_absolute_url }}" class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">{{ post.title }}</h5>
+                        <small>{{ post.created_at|date:"Y年m月d日 H:i" }}</small>
+                    </div>
+                    <p class="mb-1">{{ post.excerpt }}</p>
+                    <small>作者：{{ post.author }}</small>
                 </a>
-            </li>
-            {% for page_num in posts.paginator.page_range %}
-            <li class="page-item {% if posts.number == page_num %}active{% endif %}">
-                <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-            </li>
             {% endfor %}
-            <li class="page-item {% if not posts.has_next %}disabled{% endif %}">
-                <a class="page-link" href="{% if posts.has_next %}?page={{ posts.next_page_number }}{% endif %}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">下一页</span>
-                </a>
-        </ul>
-    </nav>
+        </div>
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                <li class="page-item {% if not posts.has_previous %}disabled{% endif %}">
+                    <a class="page-link"
+                       href="{% if posts.has_previous %}?page={{ posts.previous_page_number }}{% endif %}"
+                       aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">上一页</span>
+                    </a>
+                </li>
+                {% for page_num in posts.paginator.page_range %}
+                    <li class="page-item {% if posts.number == page_num %}active{% endif %}">
+                        <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                    </li>
+                {% endfor %}
+                <li class="page-item {% if not posts.has_next %}disabled{% endif %}">
+                    <a class="page-link" href="{% if posts.has_next %}?page={{ posts.next_page_number }}{% endif %}"
+                       aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">下一页</span>
+                    </a>
+            </ul>
+        </nav>
+    {% else %}
+        <p class="text-center">本分类下暂无文章</p>
+        <img src="https://http.cat/204" alt="204" class="img-fluid text-center" style="padding-inline: 25%;">
+    {% endif %}
 {% endblock %}
 ```
