--- a/templates/front/post.html
+++ b/templates/front/post.html
@@ -42,6 +42,86 @@
             {% endif %}
         </div>
     </div>
+    <br>
+    {# 评论区 #}
+    {% if user.is_authenticated %}
+        <div class="container">
+            <form method="post" action="{% url 'comment_add' post.id %}">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="fw-bold">评论</h3>
+                    </div>
+                    <div class="col-md-12">
+                        <label>
+                            <textarea class="form-control" name="content" rows="3" required></textarea>
+                        </label>
+                    </div>
+                    <div class="col-md-12 mt-3">
+                        <button type="submit" class="btn btn-primary">提交</button>
+                    </div>
+                </div>
+        </div>
+    {% else %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="fw-bold">评论</h3>
+                </div>
+                <div class="col-md-12">
+                    <p>请先<a href="{% url 'login' %}">登录</a>后再评论</p>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if comments %}
+        <div class="list-group">
+            {% for comment in comments %}
+                <div class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">{{ comment.user.name }}</h5>
+                        <small>{{ comment.created_time|date:"Y年m月d日" }}</small>
+                    </div>
+                    <p class="mb-1">{{ comment.content|escape|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
+        </div>
+        {% if is_paginated %}
+            <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">上一页</a>
+                    </li>
+                {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#">上一页</a>
+                    </li>
+                {% endif %}
+                {% for page_num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == page_num %}
+                        <li class="page-item active">
+                            <a class="page-link" href="#">{{ page_num }}</a>
+                        </li>
+                    {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">下一页</a>
+                    </li>
+                {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#">下一页</a>
+                    </li>
+                {% endif %}
+            </ul>
+        {% endif %}
+    </nav>
+    {% endif %}
 {% endblock %}
 
 
