--- a/templates/front/post.html
+++ b/templates/front/post.html
@@ -41,8 +41,6 @@
                 <p class="mt-0 mb-3">{{ post.body|escape|linebreaksbr }}</p>
             {% endif %}
         </div>
-    </div>
-    <br>
     {# 评论区 #}
     {% if user.is_authenticated %}
         <div class="container">
@@ -77,7 +75,7 @@
         </div>
     {% endif %}
     {% if comments %}
-        <div class="container-fluid" style="padding-inline: 10%">
+        <div class="container-fluid">
             <p class="mt-3 mb-3">共{{ comments.paginator.count }}条评论</p>
             <div class="list-group">
                 {% for comment in comments %}
@@ -127,6 +125,7 @@
             </nav>
         </div>
     {% endif %}
+    </div>
 {% endblock %}
 
 
