--- a/templates/front/category.html
+++ b/templates/front/category.html
@@ -14,10 +14,22 @@
                 <a href="{{ post.get_absolute_url }}" class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">{{ post.title }}</h5>
-                        <small>{{ post.created_at|date:"Y年m月d日 H:i" }}</small>
                     </div>
                     <p class="mb-1">{{ post.excerpt }}</p>
-                    <small>作者：{{ post.author }}</small>
+                    <ul class="list-inline text-muted">
+                        <li class="list-inline-item">
+                            <i class="fa fa-folder-open" aria-hidden="true"></i>
+                            {{ post.category.get_full_name }}
+                        </li>
+                        <li class="list-inline-item">
+                            <i class="fa fa-calendar" aria-hidden="true"></i>
+                            {{ post.created_time|date:'Y年m月d日' }}
+                        </li>
+                        <li class="list-inline-item">
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                            {{ post.author.name }}
+                        </li>
+                    </ul>
                 </a>
             {% endfor %}
         </div>
@@ -45,8 +57,10 @@
             </ul>
         </nav>
     {% else %}
-        <p class="text-center">本分类下暂无文章</p>
-        <img src="https://http.cat/204" alt="204" class="img-fluid text-center" style="padding-inline: 25%;">
+        <div class="container text-center">
+        <p>本分类下暂无文章</p>
+        <img src="https://http.cat/204" alt="204" class="img-fluid">
+        </div>
     {% endif %}
 {% endblock %}
 ```
