add login and register page

--- a/templates/front/post.html
+++ b/templates/front/post.html
@@ -70,7 +70,7 @@
                     <h3 class="fw-bold">评论</h3>
                 </div>
                 <div class="col-md-12">
-                    <p>请先<a href="/admin">登录</a>后再评论</p>
+                    <p>请先<a href="{% url 'login' %}">登录</a>后再评论</p>
                 </div>
             </div>
         </div>
