--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -55,13 +55,18 @@
                            data-bs-toggle="dropdown" aria-expanded="false">
                             {{ user.name }}</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/admin">管理</a></li>
+                            {% if user.is_staff %}
+                                <li><a class="dropdown-item" href="/admin">管理</a></li>
+                            {% endif %}
                             <li><a class="dropdown-item" href="{% url 'logout' %}">登出</a></li>
                         </ul>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin">登陆</a>
+                        <a class="nav-link" href="{% url 'login' %}">登录</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">注册</a>
                     </li>
                 {% endif %}
             </ul>
