--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -49,6 +49,18 @@
                         </ul>
                     </li>
                 {% endfor %}
+{#                <li class="nav-item dropdown">#}
+{#                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"#}
+{#                       data-bs-toggle="dropdown" aria-expanded="false">#}
+{#                        曲线</a>#}
+{#                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">#}
+{#                        <li><a class="dropdown-item" href="{% url 'stock_simple' %}">1</a></li>#}
+{#                        <li><a class="dropdown-item" href="{% url 'stock_complex' %}">2</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'stock_complex' %}">指数</a>
+                </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="/admin" id="navbarDropdown" role="button"
